<resources>
    <string name="app_name">GameNight</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dice">Dice</string>
    <string name="timer">Timer</string>
    <string name="title_activity_dice">DiceActivity</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="roll">Roll!</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="create_dice">Create Dice</string>
    <string name="faces">Faces</string>
    <string name="value">Value</string>
    <string name="remove">Remove</string>
    <string name="reroll">Reroll</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_faces">Number of Faces</string>
    <string name="number_of_die">Number of Die</string>
    <string name="sum">Sum</string>
    <string name="highest">High</string>
    <string name="mode">Mode</string>
    <string name="hours">Hours</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
</resources>
