<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dice_list_view_rl"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/dice_item_tv1"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/faces"
        android:textSize="24sp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/dice_item_tv2"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:text="@string/value"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/dice_item_bt_reroll"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/reroll"/>

    <Button
        android:id="@+id/dice_item_bt_remove"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/remove"/>

</LinearLayout>