<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/dice_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/dice_rb_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/sum"/>

        <RadioButton
            android:id="@+id/dice_rb_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/highest"/>

        <RadioButton
            android:id="@+id/dice_rb_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/mode"/>

    </RadioGroup>

    <TextView
        android:id="@+id/dice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="128sp"
        android:gravity="center"
        android:text="@string/roll"
        android:layout_below="@+id/dice_rg"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/diceListView"
        android:layout_alignParentEnd="true" />

    <ListView
        android:id="@+id/diceListView"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_above="@+id/diceControlBar"/>

    <LinearLayout
        android:id="@+id/diceControlBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/dice_bt_roll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:text="@string/roll_dice"/>

        <Button
            android:id="@+id/dice_bt_create"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:text="@string/create_dice"/>

    </LinearLayout>

</RelativeLayout>
