<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_dice"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="36sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="6dp"
        android:background="#FFFFFF"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="1000dp"
                android:layout_height="wrap_content"
                android:text="@string/number_of_die"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="1000dp"
                android:layout_height="wrap_content"
                android:text="@string/number_of_faces"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_column="1"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

        </TableRow>

        <TableRow>

            <NumberPicker
                android:id="@+id/dice_dialog_numberPicker_dice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_margin="16dp"/>

            <NumberPicker
                android:id="@+id/dice_dialog_numberPicker_faces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:layout_margin="16dp"/>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dice_dialog_cancel"
            android:layout_width="1000dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="36sp"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/dice_dialog_create"
            android:layout_width="1000dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create"
            android:textSize="36sp"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>